Android: allow to convert altitude to MSL on Android 14 and later

[ChangeLog][QGeoPositionInfo][Android] Intoroduce a plugin parameter
that allows to convert the altitude from WGS84 to MSL. This parameter
works only on Android 14 and later. By default the altitude is still
returned in WGS84 format for backwards compatibility.

Android is known to report the altitude in WGS84, which is different
from other QtPositioning backends.
Android 14 introduces a new AltitudeConverter class, which allows
to add an MSL altitude to the Location object.

This patch adds a plugin-specific parameter called `useMslAltitude`.
The default value is false to preserve the old behavior. If the value
is set to true, and an Android version >= 14 is used, position requests
will return the altitude in MSL format.

It also adds documentation for the android plugin.

Fixes: QTBUG-106049
Change-Id: Ib109df22ba706b0b8a3c10251e3cc441d67b05ac
Reviewed-by: Juha Vuolle <juha.vuolle@qt.io>